prefab note qui tourne

--- a/Projet Unity/Assembly-CSharp.csproj
+++ b/Projet Unity/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\Scripts\spawn.cs" />
      <Compile Include="Assets\Scripts\translate.cs" />
      <Compile Include="Assets\end.cs" />
+     <Compile Include="Assets\rotation.cs" />
      <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
      <None Include="Assets\Standard Assets\ParticleSystems\ParticleSystemsGuidelines.txt" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
