Sauvegarde des parties fonctionnelle
- Pour tester : SampleRunBeta22-12-2016.exe
- Ajout de la scène "Enregistrement" où on rentre le nom de la partie
qu'on vient de jouer. Le bouton "Enregistrer" teste si le nom existe
déjà dans le fichier XML et si oui, il ajoute "-1" au nom, puis "-2" si
on rentre une deuxième partie avec le même nom, etc.

--- a/Projet Unity/Assembly-CSharp.csproj
+++ b/Projet Unity/Assembly-CSharp.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\AspectUtility.cs" />
      <Compile Include="Assets\Scripts\ConversionMP3.cs" />
+     <Compile Include="Assets\Scripts\Enregistrer.cs" />
+     <Compile Include="Assets\Scripts\GameOver\loadScene.cs" />
      <Compile Include="Assets\Scripts\Instructions\AnyKeyPressed.cs" />
      <Compile Include="Assets\Scripts\Instructions\InstructionsAnimees.cs" />
      <Compile Include="Assets\Scripts\Instructions\TextFadeIn.cs" />
